增加历史表

--- a/BlazorApp1/wwwroot/index.html
+++ b/BlazorApp1/wwwroot/index.html
@@ -334,7 +334,7 @@
 			'dataType': 'json',
 			'success': function (data) {
 				if (data == true) {
-					window.location.href = "/";
+                    window.location.href = "/intergralList";
 				} else {
 					alert("滚！")
                 }
